[gd_scene load_steps=4 format=3 uid="uid://d306nx0bbxbe2"]

[ext_resource type="Script" path="res://scripts/unused/alien_bullet.gd" id="1_3k2fm"]
[ext_resource type="Texture2D" uid="uid://b6f7fthk7vrvc" path="res://icon.svg" id="1_r6t4l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdhh6"]
size = Vector2(24, 24)

[node name="alien_bullet" type="CharacterBody2D"]
script = ExtResource("1_3k2fm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_mdhh6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.90735e-06, -1)
scale = Vector2(0.183594, 0.183594)
texture = ExtResource("1_r6t4l")

[node name="visible_notifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="death_timer" type="Timer" parent="."]

[connection signal="screen_exited" from="visible_notifier" to="." method="_on_visible_notifier_screen_exited"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
